--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>John Nicholas Delacalzada.</span>
+                    Hi, I'm <span>John Nicholas De La Calzada.</span>
                     A Web Developer.
                 </h1>
                 <p>
