--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 0998725476</span>
+                                    <span>: 0950 212 1324</span>
                                 </p>
                             </div>
                             <div class="contact-item">
